# MoYunTengCli

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-04-08-cli-sdk-backup-alignment.md  2026-04-09-backup-all.md  2026-04-09-backup-mapping.md
docs/superpowers/specs/: 2026-03-24-myt-cli-design.md  2026-04-09-backup-all-design.md  2026-04-09-backup-mapping-design.md
myt_cli/: __init__.py  __main__.py  api.py  cli.py  client.py  config.py  exceptions.py  logging_utils.py  polling.py
myt_cli/services/: backup_mapping_store.py  backup_service.py  restore_service.py  s5_service.py  start_service.py  vm_service.py
tests/: test_backup_service.py  test_cli.py  test_config.py  test_vm_service.py
